--- a/gdb/ChangeLog
+++ b/gdb/ChangeLog
@@ -1,3 +1,7 @@
+2002-07-09  Michal Ludvig  <mludvig@suse.cz>
+
+	* NEWS: Note about dwarf2cfi improvements.
+
 2002-07-09  Pierre Muller  <muller@ics.u-strasbg.fr>
 
 	Merge from mainline:
