--- a/gdb/NEWS
+++ b/gdb/NEWS
@@ -1,7 +1,7 @@
 		What has changed in GDB?
 	     (Organized release by release)
 
-*** Changes since GDB 5.2:
+*** Changes in GDB 5.2.1:
 
 * New targets.
 
