--- a/gdb/ChangeLog
+++ b/gdb/ChangeLog
@@ -1,3 +1,9 @@
+2002-07-19  GDB Administrator  <gdbadmin@sourceware.cygnus.com>
+
+	GDB 5.2.1 released.
+	* version.in: Bump to version 5.2.1
+	* README, NEWS: Update to refer to GDB 5.2.1.
+
 2002-07-19  Andrew Cagney  <ac131313@redhat.com>
 
 	* Makefile.in (x86-64-tdep.o): Add $(objfiles_h).
