2002-09-05  Andrew Cagney  <ac131313@redhat.com>
	* NEWS: Update for 5.3.  Add new section ``Changes since 5.3''.
	* README: Update.

Index: doc/ChangeLog
2002-09-05  Andrew Cagney  <ac131313@redhat.com>

	* gdb.texinfo (Contributors): Mention 5.2 and 5.3 release
	engineer.

--- a/gdb/ChangeLog
+++ b/gdb/ChangeLog
@@ -1,3 +1,8 @@
+2002-09-05  Andrew Cagney  <ac131313@redhat.com>
+
+	* NEWS: Update for 5.3.
+	* README: Update.
+
 2002-09-04  Andrew Cagney  <ac131313@redhat.com>
 
 	GDB 5.3 branch created.
