--- a/gdb/ChangeLog
+++ b/gdb/ChangeLog
@@ -1,3 +1,8 @@
+2002-09-14  Elena Zannoni  <ezannoni@redhat.com>
+ 
+ 	From: Emmanuel Thome'  <thome@lix.polytechnique.fr>
+ 	* top.c (init_main): Set rl_terminal_name.
+
 2002-09-10  Andrew Cagney  <cagney@redhat.com>
 
 	* infcmd.c (default_print_registers_info): Send all output to
