--- a/gdb/gdbtk/ChangeLog
+++ b/gdb/gdbtk/ChangeLog
@@ -1,3 +1,10 @@
+2002-09-26  Andrew Cagney  <ac131313@redhat.com>
+
+	Import from mainline:
+
+	From Grace Sainsbury <graces@redhat.com>:
+	* generic/gdbtk-main.c: New file.
+
 2002-08-15  Keith Seitz  <keiths@redhat.com>
 
 	* README: Massive update.
