--- a/gdb/testsuite/gdb.gdbtk/ChangeLog
+++ b/gdb/testsuite/gdb.gdbtk/ChangeLog
@@ -1,3 +1,11 @@
+2002-09-28  Andrew Cagney  <ac131313@redhat.com>
+
+	Import from mainline:
+	2002-09-26  Keith Seitz  <keiths@redhat.com>
+        * lib/insight-support.exp (gdbtk_start): Figure out where
+        the insight executable is based on where gdb is. Use this
+        executable to start insight instead of gdb.
+
 2002-04-26  Martin M. Hunt  <hunt@redhat.com>
 
 	* defs (gdbtk_test_done): Call gdbtk_force_quit. 
