* NEWS: Change "Changes since gdb-6.5" into "Changes in gdb-6.6".

--- a/gdb/NEWS
+++ b/gdb/NEWS
@@ -1,7 +1,7 @@
 		What has changed in GDB?
 	     (Organized release by release)
 
-*** Changes since GDB 6.5
+*** Changes in GDB 6.6
 
 * New targets
 
