--- a/gdb/gdbtk/ChangeLog
+++ b/gdb/gdbtk/ChangeLog
@@ -1,3 +1,29 @@
+2006-11-30  Keith Seitz  <keiths@redhat.com>
+
+	insight/293:
+	* library/watch.tcl (no_inferior): Remove all varobjs and
+	clear the display.
+	(clear_file): Call no_inferior. Update comments.
+	* library/locals.tcl: Remove unused variables "Running"
+	and "Variables". Changed throughout.
+	(no_inferior): Delete the current frame and clear the display.
+	(clear_file): Call no_inferior. Update comments.
+	(context_switch): To delete an Itcl object, one uses
+	"delete object" not "destroy".
+
+2006-11-30  Keith Seitz  <keiths@redhat.com>
+
+	insight/299:
+	* generic/gdbtk.c (gdbtk_init): Don't check if DISPLAY is set,
+	it isn't needed anymore. Gdb will not abort, and Tk_Init will
+	fail gracefully.
+
+2006-11-30  Keith Seitz  <keiths@redhat.com>
+
+	* library/targetselection.itb (constructor): "top" is unused.
+	Remove it.
+	(get_target_list): Use "scan" to parse "help target" output.
+
 2006-11-09  Keith Seitz  <keiths@redhat.com>
 
 	* help/trace/locals.html: Remove all references to gdb.ini. Even
