--- a/gdb/testsuite/ChangeLog
+++ b/gdb/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2011-04-15  Thiago Jung Bauermann  <bauerman@br.ibm.com>
+
+	* gdb.base/watchpoint.exp (test_inaccessible_watchpoint): Don't
+	expect a colon in watch -location output.
+
 2011-03-31  Tom Tromey  <tromey@redhat.com>
 
 	* gdb.python/py-prettyprint.py (exception_flag): New global.
