--- a/sim/testsuite/ChangeLog
+++ b/sim/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2011-05-04  Pedro Alves  <pedro@codesourcery.com>
+
+	* configure: Regenerate.
+
 2010-10-07  Hans-Peter Nilsson  <hp@axis.com>
 
 	* sim/cris/c/seek3.c, sim/cris/c/seek4.c: New tests.
