--- a/gdb/ChangeLog
+++ b/gdb/ChangeLog
@@ -1,3 +1,7 @@
+2011-07-26  Joel Brobecker  <brobecker@adacore.com>
+
+	* version.in: Update GDB version number to 7.3.
+
 2011-07-15  Hui Zhu  <teawater@gmail.com>
 
 	* remote.c (remote_get_trace_status): Initialize p.
