--- a/gdb/NEWS
+++ b/gdb/NEWS
@@ -1,7 +1,7 @@
 		What has changed in GDB?
 	     (Organized release by release)
 
-*** Changes since GDB 7.2
+*** Changes in GDB 7.3
 
 * GDB has a new command: "thread find [REGEXP]".
   It finds the thread id whose name, target id, or thread extra info
